[project]
name = "reyworm"
version = "1.0.2"
description = "Rey's worm method set."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["rey", "reyxbo", "worm"]
authors = [
    {name = "Rey", email = "reyxbo@163.com"}
]
dependencies = [
    'fake_useragent',
    'reykit',
    'selenium'
]

[project.urls]
homepage = "https://github.com/reyxbo/reyworm/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"